[package]
name = "bevy_landmass"
version = "0.11.0"
edition = "2024"

description = "A plugin for Bevy to handle navigation of AI characters."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "pathfinding", "avoidance", "landmass", "bevy"]

exclude = ["/assets"]

[lints.clippy]
type_complexity = "allow"

[dependencies]
landmass = { path = "../landmass", version = "0.9.0", default-features = false }

bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_asset = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_color = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_gizmos = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_log = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_mesh = { git = "https://github.com/bevyengine/bevy", branch = "main", optional = true, default-features = false }
bevy_platform = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_time = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_transform = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
googletest = "0.14.2"

[features]
default = ["mesh-utils"]
mesh-utils = ["dep:bevy_mesh"]
debug-avoidance = ["landmass/debug-avoidance"]

[[example]]
name = "basic"
required-features = ["mesh-utils"]

[[example]]
name = "playground"
required-features = ["mesh-utils"]
