[package]
name = "landmass_rerecast"
version = "0.2.0"
edition = "2024"

description = "An integration to allow use of rerecast navigation meshes in landmass."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/landmass"

categories = ["game-development"]
keywords = ["navigation", "system", "pathfinding"]

[dependencies]
bevy_landmass = { version = "0.11", path = "../bevy_landmass", default-features = false }

bevy_app = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_asset = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_log = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_math = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
bevy_platform = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }

bevy_rerecast = { git = "https://github.com/slyedoc/rerecast", branch = "bevy-main", default-features = false }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
googletest = "0.14.2"
bevy_rerecast = { git = "https://github.com/slyedoc/rerecast", branch = "bevy-main", version = "0.3", default-features = false, features = [
    "bevy_mesh",
] }
